--- a/pom.xml
+++ b/pom.xml
@@ -6,9 +6,9 @@
 	<packaging>jar</packaging>
 	<parent>
 		<groupId>com.github.ulwx</groupId>
-		<artifactId>aka-common-cloud-parent</artifactId>
+		<artifactId>aka-common-parent</artifactId>
 		<version>2.0-SNAPSHOT</version>
-		<relativePath>../aka-common-cloud-parent/pom.xml</relativePath>
+		<relativePath>../aka-common-parent/pom.xml</relativePath>
 	</parent>
 		<build>
 		<plugins>
@@ -33,7 +33,6 @@
 		<dependency>
 			<artifactId>aka-dbutils</artifactId>
 			<groupId>com.github.ulwx</groupId>
-			<version>2.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<artifactId>aka-common-tool</artifactId>
