--- a/pom.xml
+++ b/pom.xml
@@ -17,13 +17,14 @@
 				<artifactId>maven-jar-plugin</artifactId>
 				<version>3.0.2</version>
 				<configuration>
-					<excludes>
-						<exclude>log*.xml</exclude>
-					</excludes>
+						<excludes>
+							<exclude>log*.xml</exclude>
+							<exclude>log*.properties</exclude>
+						</excludes>
 					<archive>
-					<manifest>
-					<useUniqueVersions>false</useUniqueVersions>
-					</manifest>
+						<manifest>
+							<useUniqueVersions>false</useUniqueVersions>
+						</manifest>
 					</archive>
 				</configuration>
 			</plugin>
